<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GSLDroidActivity!</string>
    <string name="app_name">GSLDroid</string>
    <string name="settings">Settings</string>
    <string name="key_username">GSLDROID_USERNAME</string>
    <string name="hr_username">E-mail address</string>
    <string name="hr_password">Password</string>
    <string name="key_password">GSLDROID_PASSWORD</string>
    <string name="play">Play</string>
    <string name="go">GO</string>
    <string name="empty_string"></string>
    <string name="login">Log in</string>
    <string name="next_page">&gt;&gt;</string>
    <string name="prev_page">&lt;&lt;</string>
    <string name="set">Set</string>
    <string name="quality">"Quality "</string>
    <string name="helptext">Please note that you need VLC for Android to play the VODs. MX Player will NOT work.</string>
    <string name="donttrytoskip">Do NOT try to seek in VLC, it will cause weird things to happen. If you seek by accident, just restart the VOD.</string>

</resources>